# embree-renderer

./: BuildKNCRenderer.bat  CMakeLists.txt  README.txt  embree-renderer.sln  embree-renderer_vs2010.sln  embree_ispc.sln
EmbreeViewportRenderer/: CMakeLists.txt  EmbreeViewportRenderer.cpp  EmbreeViewportRenderer.h  EmbreeViewportRenderer.vcxproj  EmbreeViewportRendererIH.vcxproj  EmbreeViewportRendererIX.vcxproj  EmbreeViewportRendererIXP.vcxproj  EmbreeViewportRendererPlugin.cpp  EmbreeViewportRendererSXP.vcxproj  Makefile  build_all.sh  buildconfig  buildrules  linux_plugin.map  make_clean.sh
EmbreeViewportRenderer/EmbreeViewportRendererIX/: CMakeLists.txt
EmbreeViewportRenderer/EmbreeViewportRendererIXP/: CMakeLists.txt
EmbreeViewportRenderer/EmbreeViewportRendererSX/: CMakeLists.txt
EmbreeViewportRenderer/EmbreeViewportRendererSXP/: CMakeLists.txt
common/: CMakeLists.txt
common/cmake/: FindCOI.cmake  clang.cmake  gcc.cmake  icc.cmake  icc_mic.cmake  ispc.cmake  ispc.props  ispc.targets  ispc.xml
common/image/: CMakeLists.txt  image.cpp  image.icproj  image.vcproj  image.vcxproj  jpeg.cpp  magick.cpp  ppm.cpp
common/lexers/: CMakeLists.txt  lexers.icproj  lexers.vcproj  lexers.vcxproj  tokenstream.cpp
common/math/: vector3i_sse.h
common/simd/: CMakeLists.txt  mic_f.h  simd.h  sseb.h  ssef.h  ssei.h
common/sys/: CMakeLists.txt  library.cpp  platform.cpp  ref.h  sys.icproj  sys.vcproj  sys.vcxproj  sysinfo.cpp  sysinfo.cpp.orig  taskscheduler.cpp  taskscheduler_mic.cpp  taskscheduler_sys.cpp
common/sys/sync/: condition.cpp
devices/: CMakeLists.txt
devices/device/: device.cpp  device.h  device.icproj  device.vcproj  device.vcxproj
devices/device/loaders/: xml_loader.cpp
devices/device_coi/: CMakeLists.txt  coi_common.h  coi_device.cpp  coi_device.h  coi_device.vcxproj  coi_server.cpp
devices/device_ispc/: CMakeLists.txt  default.h  default.isph  device_ispc.icproj  device_ispc.vcproj  device_ispc.vcxproj  device_ispc.vcxproj.orig
devices/device_ispc/api/: datastream.h  framebuffer.h  ispc_device.cpp  ispc_device.h  swapchain.h
devices/device_ispc/brdfs/: conductor.isph  dielectric_reflection.isph  dielectric_transmission.isph  microfacet_metal.isph  translucent.isph  velvety.isph
devices/device_ispc/cameras/: camera.isph
devices/device_ispc/framebuffers/: accubuffer.ispc  accubuffer.isph  framebuffer.isph  framebuffer_rgb8.ispc  framebuffer_rgb_float32.ispc  framebuffer_rgb_float32.isph  framebuffer_rgba8.ispc  swapchain.ispc  swapchain.isph
devices/device_ispc/lights/: distantlight.ispc  pointlight.h  pointlight.ispc  spotlight.ispc
devices/device_ispc/materials/: dielectric.h  dielectric.ispc  material.ispc  material.isph  matte.ispc  matte_textured.ispc  metal.ispc  metallicpaint.ispc  mirror.ispc  obj.ispc  plastic.ispc  thindielectric.ispc  uber.h  uber.ispc  velvet.ispc
devices/device_ispc/math/: affinespace.isph  linearspace.isph  math.isph  ray.isph
devices/device_ispc/renderers/: debugrenderer.h  debugrenderer.ispc  pathtracer.h  pathtracer.ispc  renderer.ispc
devices/device_ispc/samplers/: precomputed_sampler.isph
devices/device_ispc/scene/: instance.ispc  instance.isph  scene.ispc  scene.isph
devices/device_ispc/shapes/: differentialgeometry.isph  shape.ispc  shape.isph  sphere.cpp  trianglemesh.cpp  trianglemesh.ispc
devices/device_ispc/textures/: image3c.ispc
devices/device_network/: CMakeLists.txt  network_common.h  network_device.cpp  network_device.h  network_device.icproj  network_device.vcproj  network_device.vcxproj  network_server.cpp  network_server.icproj  network_server.vcproj  network_server.vcxproj
devices/device_singleray/: CMakeLists.txt  default.h  device_singleray.icproj  device_singleray.vcproj  device_singleray.vcxproj
devices/device_singleray/api/: datastream.h  framebuffer.h  scene.h  scene_flat.h  scene_instancing.h  singleray_device.cpp  singleray_device.h  swapchain.h
devices/device_singleray/brdfs/: dielectric.h  translucent.h  velvety.h
devices/device_singleray/cameras/: camera.h
devices/device_singleray/integrators/: integrator.h  pathtraceintegrator.cpp  pathtraceintegrator.h
devices/device_singleray/lights/: distantlight.h  pointlight.h  spotlight.h
devices/device_singleray/materials/: dielectric.h  material.h  thindielectric.h  uber.h
devices/device_singleray/renderers/: debugrenderer.cpp  debugrenderer.h  integratorrenderer.cpp  integratorrenderer.h  ray.h
devices/device_singleray/shapes/: differentialgeometry.h  shape.h  triangle.h  trianglemesh_full.cpp  trianglemesh_full.h  trianglemesh_normals.cpp  trianglemesh_normals.h
devices/renderer/: CMakeLists.txt  glutdisplay.cpp  renderer.cpp  renderer.icproj  renderer.vcproj  renderer.vcxproj
models/: sphere_gold.xml  sphere_translucent_glass.ecs  sphere_translucent_glass.xml
scripts/: benchmark.py
tools/obj2xml/: CMakeLists.txt  obj2xml.cpp  objLoader.cpp  objLoader.h  xmlWriter.cpp  xmlWriter.h
tools/vrml2xml/: CMakeLists.txt  vrml2xml.cpp  vrml_loader.cpp  vrml_loader.h
tools/xml2obj/: CMakeLists.txt  xml2obj.cpp
